// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spacer should hide the border 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 35px;
  padding: 0 12px;
  cursor: pointer;
  opacity: 100%;
  border-bottom: 4px solid;
  border-bottom-color: #ffffff;
}

.c0:hover {
  border-bottom-color: #000000;
}

.c1 {
  font-family: Inter;
  font-size: 14;
  font-weight: 500;
  line-height: 24px;
  color: #000000;
}

<body>
  <div>
    <div
      class="c0"
      value="Tab 1"
    >
      <p
        class="c1"
      >
        Tab 1
      </p>
    </div>
  </div>
</body>
`;

exports[`Spacer should render 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 35px;
  padding: 0 12px;
  cursor: pointer;
  opacity: 100%;
  border-bottom: 4px solid;
  border-bottom-color: #ffffff;
}

.c0:hover {
  border-bottom-color: #000000;
}

.c1 {
  font-family: Inter;
  font-size: 14;
  font-weight: 500;
  line-height: 24px;
  color: #000000;
}

<body>
  <div>
    <div
      class="c0"
      value="Tab 1"
    >
      <p
        class="c1"
      >
        Tab 1
      </p>
    </div>
  </div>
</body>
`;

exports[`Spacer should show a bottom border when active 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 35px;
  padding: 0 12px;
  cursor: pointer;
  opacity: 100%;
  border-bottom: 4px solid;
  border-bottom-color: #000000;
}

.c0:hover {
  border-bottom-color: #000000;
}

.c1 {
  font-family: Inter;
  font-size: 14;
  font-weight: 500;
  line-height: 24px;
  color: #000000;
}

<body>
  <div>
    <div
      class="c0"
      value="Tab 1"
    >
      <p
        class="c1"
      >
        Tab 1
      </p>
    </div>
  </div>
</body>
`;
